# Personal-Stylist-Shopping-Assistant

./: .gitignore  README.md  manifest.json
backend/: .env.example  README.md  app.py  pyproject.toml
backend/config/: settings.py
backend/data/: uniqlo_recommendations.json  user_profile.py
backend/routes/: conversation.py
backend/services/: context_builder.py  recommendation_engine.py  tavus_client.py
background/: background.js
content/: content.css  content.js
extension/: README.md  manifest.json
extension/assets/icons/: .gitkeep  generate_icons.py
extension/background/: background.js
extension/content/: content.css  content.js  page-analyzer.js
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
popup/: popup.css  popup.html  popup.js
