[project]
name = "tavus-backend"
version = "0.1.0"
description = "Backend API for Tavus Shopping Assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.32.5",
]

[tool.uv]
dev-dependencies = []
